deployments/ocis-office/addons/onlyoffice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/ssl-passthrough: "true" #TODO: --enable-ssl-passthrough must be set on the nginx ingress controller
  name: ingress-chain
spec:
  ingressClassName: nginx
  rules:
    - host: onlyoffice.kube.owncloud.test
      http:
        paths:
          - backend:
              service:
                name: onlyoffice-ingress-nginx-controller
                port:
                  number: 443
            path: /
            pathType: Prefix
